--- a/apk_nutrisi/wireframe/pubspec.yaml
+++ b/apk_nutrisi/wireframe/pubspec.yaml
@@ -16,7 +16,10 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  assets:
+    - assets/tempe.jpg
+    - assets/dada_ayam.jpg
+    - assets/paha_ayam.jpg
+    - assets/ikan_nila.jpg
   uses-material-design: true
 
-assets:
-  - assets/
